[package]
name = "mssmt"
version = "0.0.1"
authors = ["@AbdelStark <abdelstark@proton.me>"]
edition = "2021"
description = "A Rust implementation of a Merkle-Sum Sparse Merkle Tree (MS-SMT)"
license = "MIT"
repository = "https://github.com/AbdelStark/mssmt"
homepage = "https://github.com/AbdelStark/mssmt"
documentation = "https://docs.rs/mssmt"
readme = "README.md"
keywords = ["merkle-tree", "sparse-merkle-tree", "data-structure", "rust"]
categories = ["data-structures", "cryptography"]

[dependencies]
anyhow = "1.0.91"
hex = "0.4"
once_cell = "1.17"
parking_lot = "0.12"
sha2 = "0.10"

[dev-dependencies]


[badges]
github-actions = { repository = "AbdelStark/mssmt", workflow = "Continuous Integration" }
